添加CronExpression项目，添加新任务
解决任务配置问题

--- a/Mysoft.Task/Mysoft.Task.csproj
+++ b/Mysoft.Task/Mysoft.Task.csproj
@@ -57,6 +57,7 @@
     <Compile Include="TaskSet\TestJob.cs" />
     <Compile Include="TaskSet\ExpressProgressJob.cs" />
     <Compile Include="TaskSet\SendMessageJob.cs" />
+    <Compile Include="TaskSet\ConfigJob.cs" />
     <Compile Include="Utils\ExpressUtil.cs" />
     <Compile Include="Utils\IpProxyGet.cs" />
   </ItemGroup>
