--- a/Mysoft.Task/Mysoft.Task.csproj
+++ b/Mysoft.Task/Mysoft.Task.csproj
@@ -31,17 +31,22 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Enyim.Caching">
+      <HintPath>..\packages\EnyimMemcached.2.13\lib\net35\Enyim.Caching.dll</HintPath>
+    </Reference>
     <Reference Include="HtmlAgilityPack">
       <HintPath>..\TaskManager\DLL\HtmlAgilityPack.dll</HintPath>
     </Reference>
     <Reference Include="HttpHelper">
       <HintPath>..\TaskManager\DLL\HttpHelper.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\TaskManager\DLL\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
-    <Reference Include="Quartz">
-      <HintPath>..\TaskManager\DLL\Quartz.dll</HintPath>
+    <Reference Include="Quartz, Version=2.3.3.0, Culture=neutral, PublicKeyToken=f6b8c98a402cc8a4, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Quartz.2.3.3\lib\net40\Quartz.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -60,6 +65,7 @@
     <Compile Include="TaskSet\ConfigJob.cs" />
     <Compile Include="Utils\ExpressUtil.cs" />
     <Compile Include="Utils\IpProxyGet.cs" />
+    <Compile Include="Utils\TaskLog.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="TaskConfig.xml">
@@ -77,6 +83,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="packages.config" />
     <None Include="Temples\ExpressDetail.vm">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
