--- a/Mysoft.Utility/log4net.config
+++ b/Mysoft.Utility/log4net.config
@@ -13,6 +13,10 @@
       <level value="INFO" />
       <appender-ref ref="InfoAppender" />
     </logger>
+    <logger name="logconsole">
+      <level value="INFO" />
+      <appender-ref ref="ConsoleAppender" />
+    </logger>
     <appender name="ErrorAppender" type="log4net.Appender.RollingFileAppender">
       <param name="File" value="Logs\ErrorLog.log" />
       <param name="AppendToFile" value="true" />
@@ -36,11 +40,10 @@
       </layout>
     </appender>
 
-    <!-- Setup the root category, add the appenders and set the default level -->
-    <root>
-      <level value="ALL" />
-      <appender-ref ref="ConsoleAppender" />
-      <appender-ref ref="RollingLogFileAppender" />
-    </root>
+    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%d [%t] %-5p %m%n" />
+      </layout>
+    </appender>
   </log4net>
 </configuration>
