--- a/TaskManagerWeb/packages.config
+++ b/TaskManagerWeb/packages.config
@@ -1,13 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="4.1.1" targetFramework="net40" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net40" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net40" />
+  <package id="log4net" version="2.0.8" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net40" />
-  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net40" />
-  <package id="Nancy" version="1.4.3" targetFramework="net4" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net40" />
+  <package id="Nancy" version="1.4.4" targetFramework="net40" />
   <package id="Nancy.Authentication.Forms" version="1.4.1" targetFramework="net40" />
   <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net4" />
   <package id="Nancy.Viewengines.Razor" version="1.4.3" targetFramework="net4" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net40" />
   <package id="NPOI" version="1.2.5" targetFramework="net40" />
+  <package id="Quartz" version="2.6.0" targetFramework="net40" />
+  <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net40" />
 </packages>
