--- a/Ywdsoft.Task/packages.config
+++ b/Ywdsoft.Task/packages.config
@@ -1,8 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="3.3.1" targetFramework="net4" />
-  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net4" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net40" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net40" />
   <package id="EnyimMemcached" version="2.16.0" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net40" />
-  <package id="Quartz" version="2.4.1" targetFramework="net40" />
+  <package id="log4net" version="2.0.8" targetFramework="net40" />
+  <package id="Nancy" version="1.4.4" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net40" />
+  <package id="Quartz" version="2.6.0" targetFramework="net40" />
+  <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net40" />
 </packages>
