--- a/Ywdsoft.Utility/packages.config
+++ b/Ywdsoft.Utility/packages.config
@@ -1,14 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Common.Logging" version="3.3.1" targetFramework="net4" />
-  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net4" />
+  <package id="Common.Logging" version="3.4.1" targetFramework="net40" />
+  <package id="Common.Logging.Core" version="3.4.1" targetFramework="net40" />
   <package id="Dapper" version="1.50.2" targetFramework="net40" />
-  <package id="log4net" version="2.0.7" targetFramework="net40" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net40" />
+  <package id="log4net" version="2.0.8" targetFramework="net40" />
+  <package id="Nancy" version="1.4.4" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net40" />
   <package id="NPOI" version="1.2.5" targetFramework="net4" />
   <package id="NVelocity" version="1.0.3" targetFramework="net4" />
-  <package id="Quartz" version="2.4.1" targetFramework="net40" />
+  <package id="Quartz" version="2.6.0" targetFramework="net40" />
   <package id="RabbitMQ.Client" version="3.5.7" targetFramework="net40" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
-  <package id="System.Data.SQLite.Core" version="1.0.104.0" targetFramework="net40" />
+  <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net40" />
 </packages>
