--- a/Ywdsoft.WindowService/app.config
+++ b/Ywdsoft.WindowService/app.config
@@ -7,6 +7,7 @@
   </configSections>
   <appSettings>
     <add key="webPages:Enabled" value="false" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.web.webPages.razor>
     <pages pageBaseType="Nancy.ViewEngines.Razor.NancyRazorViewBase">
@@ -31,4 +32,16 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
