--- a/Ywdsoft.WindowService/packages.config
+++ b/Ywdsoft.WindowService/packages.config
@@ -3,11 +3,13 @@
   <package id="Common.Logging" version="3.4.1" targetFramework="net40" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net40" />
   <package id="log4net" version="2.0.8" targetFramework="net40" />
-  <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net4" />
+  <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" />
   <package id="Nancy" version="1.4.4" targetFramework="net40" />
+  <package id="Nancy.Authentication.Token" version="1.4.1" targetFramework="net40" />
   <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net4" />
   <package id="Nancy.Viewengines.Razor" version="1.4.3" targetFramework="net4" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net40" />
   <package id="Quartz" version="2.6.0" targetFramework="net40" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net40" />
   <package id="System.Data.SQLite.Core" version="1.0.105.2" targetFramework="net40" />
 </packages>
